<resources>
    <string name="app_name">BookShop</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signup">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_in">Sign in</string>
    <string name="signin">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello,</string>
    <string name="hello_sign_in">Sign in!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="listText">Text</string>
</resources>
