<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/black_transparent_background"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_nbg"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="18dp"
            android:text="@string/create_your_account"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:drawableEnd="@drawable/baseline_account_circle_24"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:linksClickable="false"
            android:minHeight="48dp"
            android:singleLine="false"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/baseline_aod_24"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textStyle="normal"
            android:backgroundTint="#FFFFFF"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPhone"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/baseline_mail_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:backgroundTint="#FFFFFF"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/baseline_https_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:minHeight="48dp"
            android:backgroundTint="#FFFFFF" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/baseline_https_24"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:backgroundTint="#FFFFFF"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="sans-serif-black"
            android:padding="16dp"
            android:text="@string/signup"
            android:textColor="@color/Bleu"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="36dp"
        android:text="Already have an account?"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvsignin"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="-70dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="signInClicked"
        android:padding="16dp"
        android:paddingStart="5dp"
        android:singleLine="false"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:ignore="UsingOnClickInXml,TextContrastCheck" />

</RelativeLayout>

