<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/black_transparent_background"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_nbg"
            android:visibility="visible" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"
            android:text="@string/hello"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvTitleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"
            android:text="@string/hello_sign_in"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/etEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleSignIn"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:backgroundTint="#FFFFFF"
            android:drawableEnd="@drawable/baseline_mail_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <EditText
            android:id="@+id/etPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmailSignIn"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="22dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/baseline_https_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:minHeight="48dp"
            android:backgroundTint="#FFFFFF" />


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPasswordSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="sans-serif-black"
            android:padding="16dp"
            android:text="@string/signin"
            android:textColor="@color/Bleu"
            android:textStyle="bold" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tvsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="36dp"
        android:text="Don't have an account?"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvsignup"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="-70dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="signUpClicked"
        android:padding="16dp"
        android:paddingStart="5dp"
        android:singleLine="false"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        tools:ignore="UsingOnClickInXml,TextContrastCheck" />

</RelativeLayout>
